chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

body {
    font-family: "roboto";
    text-align: center;
    /*display: grid;
    
    height: 100vh;
    grid-template-columns: 2fr auto;
    grid-template-rows: auto auto 1fr auto;*/
}

button {
    background-color: rgb(205, 55, 0);
    color: rgb(255, 254, 253);
    font-weight: bold;
    padding: 20px;
    margin: 10px;
}
button:hover {
    background-color: rgb(255, 90, 30);
    color: rgb(255, 255, 253);
    font-weight: bolder;
}
button:active {
    background-color: orange;
    color: white;
    font-weight: bolder;
}
button:visited {
    background-color: rgba(255, 90, 30, 0.24);
    color: rgba(255, 252, 247, 0.24);
    font-weight: bolder;
}
button:visited:hover {
    background-color: rgba(255, 166, 0, 0.5);
    color: rgb(255, 255, 255, 0.5);
    font-weight: bolder;
}

header, footer {
	background-color: navy;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 20px;
	border: 1px solid rgba(255, 255, 255, 0.1);
}

img {
    height: 100px;
    width: 130px;
}
h1 {
    font-size: 24px;
    color: white;
}

/* small view navigation */
#menu {
	font-size: 1.5rem;
	border: 1px solid rgba(0,0,0,.3);
	padding: 3px 7px 6px;
	background-color: #eee;
	color: #000;
 	position: absolute;
    top: .50em;
    right: .50em;
}

#menu::before {
	content: "☰";
}

#menu.open::before {
	content: "X";
    font-family: "roboto";
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
	background-color: #000000;
	color: #fff;
}

.navigation a {
	display: none;
	padding: 1rem;
	text-align: center;
	text-decoration: none;
	color: #fff;
}
.navigation a:hover, section a:hover {
	font-weight: 700;
    font-size: larger;
    
    color: #aef4ff;
}

/* when the button is clicked - the open class is toggled (added/removed) */
.open a {
	display: block;
}

.active::before {
	content: "📍";  /* just a wayfinding symbol for the user */
}

.stuff {
	margin: .5em;
	border: 1px solid rgba(0,0,0,.1);
	background-color: #bed;
	max-width: 580px;
	height: 100vh;
	
}

nav {
    display: block;
    color: white;
    background-color: #000;
    padding: 5px;
}
h2, h3 {
    margin: 0;
}

nav a {
    display: block;
    text-align: center;
}
nav a:hover, section a:hover {
	text-decoration:underline;
    color: red;
}
section.card h2::before {
    content: "✨";
}

section a, nav a {
    color: rgb(255, 255, 255);
    padding: 5px;
}

a:visited {
    text-decoration: none;
    color: rgb(251, 255, 0);
}

main {
    color: #ffffff;
    background: rgb(61, 44, 185);
    padding: 10px;
}

main section.card {
    border: 20px;
    margin: 25px;
    padding: 15px;
    background-color: rgba(0, 0, 0, 0.205);
}

footer {
    display: inline-block;
    color: #aef4ff;
    padding: 20px;

}
footer p {
    border: #000 5px;
    margin: 15px;
}

